--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ nav {
 nav button:hover {
   border: none !important;
 }
-.contact {
+.container .navbar-nav .contact {
   padding: 8px 20px !important;
   background-color: aqua;
   border-radius: 8px;
