--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,11 @@ nav {
   width: 100%;
   z-index: 100;
 }
+nav #navbarText ul li a {
+  font-weight: bold;
+  color: #fff;
+}
+
 nav button:hover {
   border: none !important;
 }
@@ -93,7 +98,10 @@ section.what-we-do {
   height: 70vh;
   width: 100%;
   background-image: url("../gambar/bg.png");
-  /* background-color: antiquewhite; */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body .our-gallery .containers img {
@@ -186,6 +194,76 @@ body .our-gallery .containers .demo:hover {
   opacity: 1;
 }
 
+body .schedule .container-schedule {
+  display: flex;
+  width: 80%;
+  margin: auto;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+body .schedule .list-schedule {
+  background-color: aqua;
+  /* text-align: center; */
+  display: inline-block;
+  margin: auto;
+  /* padding: 10px 20px; */
+  border-radius: 8px;
+  margin-top: 30px;
+}
+body .schedule .list-schedule ol {
+  position: relative;
+}
+body .schedule .list-schedule .hari {
+  list-style: none;
+  border-radius: 8px;
+  font-weight: bold;
+  background-color: #aa0809;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  color: #fff;
+  position: absolute;
+  left: 0px;
+}
+
+body .schedule .list-schedule ul {
+  padding: 40px 60px 0;
+}
+
+body .bergabung-dan-mendukung .content-bergabung-mendukung {
+  display: flex;
+  align-items: center;
+}
+
+body .bergabung-dan-mendukung .content-bergabung-mendukung .no-rekening {
+  flex: 1;
+}
+
+body .bergabung-dan-mendukung .content-bergabung-mendukung .norek {
+  border: 1px solid black;
+  background-color: #aeaeae;
+  border-radius: 12px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.564);
+  text-align: center;
+  padding: 25px 20px;
+  margin: auto;
+  width: 350px;
+}
+
+body .bergabung-dan-mendukung .content-bergabung-mendukung .informasi {
+  flex: 1;
+}
+
+body .testimoni .list-testimoni .testimonis {
+  /* bg-warning px-5 py-2" style="width: 350px; */
+  background-color: orange;
+  padding: 10px 20px;
+  width: 350px;
+  border-top-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+
 @media (max-width: 700px) {
   .halaman-utama {
     flex-direction: column-reverse;
@@ -220,5 +298,10 @@ body .our-gallery .containers .demo:hover {
 
   .about p {
     padding: 0 !important;
+  }
+  body .bergabung-dan-mendukung .content-bergabung-mendukung {
+    /* display: flex; */
+    flex-direction: column;
+    /* align-items: center; */
   }
 }
